2011-10-23  Luke Macpherson   <macpherson@chromium.org>

        Add watchlist for WebCore/css and put myself on it.
        https://bugs.webkit.org/show_bug.cgi?id=70701

        Reviewed by Adam Barth.

        * Scripts/webkitpy/common/config/watchlist:
        Add watchlist for WebCore/css and put myself on it.

2011-10-23  Kaustubh Atrawalkar  <kaustubh@motorola.com>

        [GTK] Implement KeyDown function for WebKit2 EventSender.
        https://bugs.webkit.org/show_bug.cgi?id=69410

        Reviewed by Martin Robinson.

        Implement the KeyDown function on Gtk platform.

        * WebKitTestRunner/GNUmakefile.am:
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::TestController):
        (WTR::TestController::didReceiveSynchronousMessageFromInjectedBundle):
        * WebKitTestRunner/gtk/EventSenderProxyGtk.cpp: Added.
        (WTR::EventSenderProxy::EventSenderProxy):
        (WTR::dispatchEvent):
        (WTR::getModifiers):
        (WTR::getGDKKeySymForKeyRef):
        (WTR::EventSenderProxy::keyDown):

2011-10-22  Zan Dobersek  <zandobersek@gmail.com>

        [WK2][GTK] run-launcher script fails after testing WK2 tests
        https://bugs.webkit.org/show_bug.cgi?id=70676

        Reviewed by Andreas Kling.

        Pass the '-2' flag instead of '--webkit-test-runner' when executing
        run-launcher script after testing with WebKitTestRunner.

        * Scripts/webkitpy/layout_tests/port/gtk.py:

2011-10-22  Zan Dobersek  <zandobersek@gmail.com>

        [WK2][GTK] Missing env variables cause WKTR to crash
        https://bugs.webkit.org/show_bug.cgi?id=70674

        Reviewed by Martin Robinson.

        Set two environment variables that the Gtk's port of WebKitTestRunner
        depends on and crashes if they're not explicitly set by the user.
        Also modify the setting of the WEBKIT_INSPECTOR_PATH variable so it
        properly uses the _build_path method.
