@@ -1,3 +1,14 @@
+2011-10-23  Tomasz Morawski  <t.morawski@samsung.com>
+
+        [EFL] Remove unused code from EWebLauncher
+        https://bugs.webkit.org/show_bug.cgi?id=70590
+
+        Reviewed by Andreas Kling.
+
+        Removed unused function on_closeWindow from EWebLauncher
+
+        * EWebLauncher/main.c:
+
 2011-10-23  Luke Macpherson   <macpherson@chromium.org>
 
         Add watchlist for WebCore/css and put myself on it.
